Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21040

[REG 4.5 -> 4.6] Does not show collapsed text at text editor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.7.2
    • Qt Creator 4.6.0 , Qt Creator 4.7.0, Qt Creator 4.7.1
    • Editors
    • None
    • build QtC gitrev: d2146644a69c1d130b42d611c2591c8dbdbc8abf
      Ubuntu 14.04 LTS
    • Linux/X11

      I use QtC 4.7.1 I noticed that when move the cursor over the thumbnail "collapsed code", the text does not appear. See pict at attachment.
      This problem was noticed by me also in versions 4.6.x and 4.7.0

        For Gerrit Dashboard: QTCREATORBUG-21040
        # Subject Branch Project Status CR V

            davschul David Schulz
            hkarel Karelin Pavel
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes