Editor: Do not jump over invisible blocks in paintEvent sub routine

The paintEvent relies on invisible blocks to find
collapsed blocks and paint the collapsed block popup.

Task-number: QTCREATORBUG-21040
Change-Id: Id50e8602722fd807e57fa008cf9fd8106ffdafe1
Reviewed-by: Eike Ziller <eike.ziller@qt.io>